@@ -61,7 +61,7 @@ the code and fix the bugs. All fixes and evolutions will be welcome.
 Please again, do not delete the copyright and author headers in the files.
 
 If you didn't do it already, subscribe to the xfbb mailing list by sending a 
-email to majordomo@f6fbb.org without title and with "subscribe xfbb" as the 
+email to xfbb@f6fbb.org without title and with "subscribe xfbb" as the 
 first line of text.
 
 Then you will be able to send your fix, evolutions proposals and remarks to 
